# nex-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dev/: build_and_upload_package.sh  upload_package.sh
nex-adb/: README.md  pyproject.toml
nex-adb/src/nex_adb/: __init__.py  cli.py  device.py  port_checker.py  scanner.py
nex-dev/: README.md  pyproject.toml
nex-dev/src/nex_dev/: cli.py  constants.py  discover.py  main.py  package.py  utils.py
nex-imgops/: README.md  pyproject.toml
nex-imgops/src/nex_imgops/: cli.py  ops.py  transformer.py  utils.py
nex-kms/: README.md  pyproject.toml
nex-kms/src/nex_kms/: __init__.py  cli.py  client.py  constants.py  utils.py
nex-kms/src/nex_kms/secrets/: sample_message.txt.dec  sample_message.txt.enc
nex-nbp/: README.md  pyproject.toml
nex-nbp/src/nex_nbp/: __init__.py  cli.py
nex-nbp/src/nex_nbp/bitrise/: __init__.py  client.py  constants.py  utils.py
nex-nbp/src/nex_nbp/bitrise/secrets/: bitrise_api_key.enc  bitrise_org_slug.enc
nex-nbp/src/nex_nbp/gcp/: __init__.py  app_entry.py  build_entry.py  client.py  constants.py  utils.py
nex-nbp/src/nex_nbp/gcp/secrets/: gcp_nbp_sa_key.json.enc
nex-nbp/src/nex_nbp/git/: __init__.py  utils.py
nex-unity/: README.md  pyproject.toml
nex-unity/src/nex_unity/: __init__.py  cli.py
nex-unity/src/nex_unity/secrets/: upmconfig.toml.enc
nexcli/: MANIFEST.in  README.md  pyproject.toml
nexcli/src/nexcli/: cli.py
nexcli/src/nexcli/adb/: cli.py
nexcli/src/nexcli/common/: __init__.py  config.py  constants.py
nexcli/src/nexcli/completion/: setup.py
nexcli/src/nexcli/drive/: cli.py  service.py
nexcli/src/nexcli/olympia/: apksigner.py  bugreport.py  cli.py  cms.py  devicelog.py  diag.py  opensearch.py
nexcli/src/nexcli/olympia/mixpanel/: cli.py  deviceid.py
nexcli/src/nexcli/olympia/secrets/: playos-apk-signer-2_password.enc
nexcli/src/nexcli/utils/: locate.py  package.py  package_list.py  uri.py
olympiatools/: cli.py  deviceid.py
olympiatools/config/: google_oauth_client_credentials.json
olympiatools/drive/: service.py
scripts/: build_and_upload_package.sh  pypirc  upload_package.sh
src/nexcli/: adb.py  cli.py
src/nexcli/adb/: adb-scan.sh
src/nexcli/drive/: cli.py  service.py
src/nexcli/olympia/: apksigner.py  cms.py  deviceid.py
src/nexcli/olympia/secrets/: playos-apk-signer-1.jks  playos-apk-signer-1_password.enc
src/olympiatools/: adb.py  cli.py  cms.py  signapk.py
src/olympiatools/drive/: cli.py  service.py
src/olympiatools/scripts/: adb-scan
src/olympiatools/secrets/: playos-apk-signer-2.jks
telemetry/: find_serial_number
