[project]
name = "nexcli"
version = "0.1.0"
description = "Command line tools for Nex"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click>=8.1",
    "google-api-python-client>=2.122",
    "google-auth-oauthlib>=1.2.0",
    "google-cloud-kms>=2.21",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.scripts]
nex = "nexcli.cli:main"