[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nex-dev"
version = "0.0.1"
description = "Utilities for handling python package development."
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.1",
    "click>=8.1",
    "keyring>=25.1.0",
    "keyrings.google-artifactregistry-auth>=1.1.2",
    "twine>=5.0.0",
]

[project.entry-points.'nexcli.subcommands']
dev = "nex_dev:cli"

[project.scripts]
nex-dev = "nex_dev:cli"
