[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexcli"
version = "0.1.5"
description = "Command line tools for Nex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "google-api-python-client>=2.122",
    "google-auth-oauthlib>=1.2.0",
    "google-cloud-kms>=2.21",
    "requests>=2.31",
    "requests_toolbelt>=1.0.0",
    "rich>=13.7.1",
    "tqdm>=4.66",
    "pyaxmlparser>=0.3.31",
]

[project.entry-points.'nexcli.subcommands']
adb = "nexcli.adb:cli"
drive = "nexcli.drive:cli"
olympia = "nexcli.olympia:cli"

[project.scripts]
nex = "nexcli.cli:main"
